--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pingpp-js": "^2.2.14",
     "vue": "^2.5.2",
     "vue-apollo": "^2.1.0-rc.4",
+    "vue-markdown": "^2.2.4",
     "vue-monaco": "^0.3.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1"
