--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tag": "^2.10.1",
     "iview": "^3.5.0",
     "jsencrypt": "^3.0.0-rc.1",
+    "lodash": "^4.17.15",
     "pingpp-js": "^2.2.14",
     "view-design": "^4.0.2",
     "vue": "^2.5.2",
